# swarmx

./: README.md  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/swarmx_escrow/: Cargo.toml
anchor/programs/swarmx_escrow/src/: lib.rs
anchor/programs/vault/src/: lib.rs
app/: globals.css  layout.tsx  page.tsx
app/api/swarm/: route.ts
app/components/swarm/: SettlementCard.tsx  StatusPill.tsx  SwarmTerminal.tsx  TaskDAG.tsx
app/dashboard/: page.tsx
app/hooks/: useSwarmEscrow.ts
app/idl/: swarmx_escrow.json
app/types/: swarm.ts
backend/: .dockerignore  Dockerfile  package-lock.json  package.json  test-gemini.ts
backend/src/: index.ts  orchestrator.ts  types.ts
backend/src/agents/: marketData.ts  marketDataBrowser.ts  sentiment.ts  sentimentBrowser.ts  synthesizer.ts
backend/src/browser/: browserAgent.ts
backend/src/llm/: client.ts  utils.ts
backend/src/solana/: client.ts
