[package]
name = "swarmx-escrow"
version = "0.1.0"
description = "SwarmX escrow program for agentic task payments"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "swarmx_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["associated_token"] }
